Fix horizontal scroll

--- a/components/LayoutWrapper/index.module.scss
+++ b/components/LayoutWrapper/index.module.scss
@@ -4,6 +4,7 @@
 .layout {
   min-height: 100vh;
   width: 100vw;
+  max-width: 100vw;
   overflow: hidden;
   overflow-y: auto;
   background-color: $primary-ultra-light;
@@ -186,6 +187,9 @@
     background-image: url(/images/abstract-bg.svg);
     background-color: $white !important;
     margin-top: $header-height;
+    width: 100vw;
+    max-width: 100vw;
+    overflow: hidden;
     &[data-is-form="true"] {
       background-color: $primary-ultra-light !important;
       background-image: url(/images/background.svg);
